# cdt-toolkit

./: .mise.toml  ARCHITECTURE.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
THIRD_PARTY_LICENSES/: Apache-2.0.txt  BSD-3-Clause.txt  MIT.txt  README.md
scripts/: bump-version.sh  check.sh  package-release.sh  publish.sh  rehearse-release.sh  release.sh  tune-fixtures.sh
skills/dictionary-tuning/: SKILL.md
skills/dictionary-tuning/agents/: openai.yaml
skills/dictionary-tuning/scripts/: tune-corpus.sh
src/: cli.rs  error.rs  io.rs  main.rs
src/compress/: mod.rs
src/dictionary/: mod.rs
src/ffi/: brotli.rs  mod.rs  zstd.rs
tests/: compress_parity.rs  dictionary_parity.rs
tests/fixtures/: README.md
tests/fixtures/html/: rfc9111.html  rfc9113.html  rfc9114.html  rfc9842.html
tests/fixtures/oracle/: README.md  css.dict  entries.dict  html.dict  js.dict
