[package]
name = "cdt-toolkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Compression Dictionary Transport toolkit"
publish = false

[[bin]]
name = "cdt"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
brotlic-sys = "0.2.2"
sha2 = "0.10.9"
zstd-safe = "7.2.4"

[dev-dependencies]
tempfile = "3.20.0"
