[package]
name = "cdt-toolkit"
version = "0.0.1"
description = "Compression Dictionary Transport toolkit"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/Jxck/cdt-toolkit"
repository = "https://github.com/Jxck/cdt-toolkit"
categories = ["command-line-utilities", "compression"]
keywords = ["compression", "brotli", "zstd"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "cdt"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
brotlic-sys = "0.2.2"
clap = { version = "4.5.39", features = ["derive"] }
sha2 = "0.10.9"
zstd-safe = "7.2.4"

[dev-dependencies]
tempfile = "3.20.0"
